# shok

./: .gitignore  ASAP.txt  ASTWalker.txt  BUILD  COPYING  COPYRIGHT  LICENSE  Lush.y  Makefile  Makefile.am  README.md  Scanner.x  THANKS  basics.md  block.txt  configure.ac  features.md  funcs3.txt  hacknotes.txt  if.txt  interpreter.md  lush_parser  modes.md  motivation.txt  notes.txt  objects.txt  parse.txt  renew.txt  shok_lexer  spec.txt  test.sh  test.txt  todo.txt  walkthrough.md
c2/: Atom.cpp  Atom.h  Cmd.cpp  Cmd.h  CmdLine.cpp  CmdLine.h  Code.cpp  Code.h  Common.h  CompileError.h  Compiler.cpp  Compiler.h  ExpParser.h  Expression.cpp  Expression.h  Function.cpp  Function.h  IntLiteral.cpp  IntLiteral.h  Literal.h  Makefile.am  NewInit.cpp  NewInit.h  Object.cpp  Object.h  Operator.cpp  Operator.h  Scope.cpp  Scope.h  StdLib.cpp  StdLib.h  StringLiteral.cpp  StringLiteral.h  SymbolTable.cpp  SymbolTable.h  Type.cpp  Type.h  Variable.cpp  Variable.h  bytecode.txt  (+3 more)
compiler/: ArgSpec.h  Args.cpp  Args.h  Block.cpp  Brace.cpp  Brace.h  Command.cpp  Command.h  CommandFragment.cpp  CommandFragment.h  Common.h  Identifier.cpp  IsVar.h  Makefile.am  New.h  NewInit.h  Node.cpp  Node.h  Object.h  ObjectLiteral.h  Operator.cpp  Operator.h  OperatorParser.h  ProcCall.cpp  ProcCall.h  Returns.cpp  Returns.h  RootNode.h  Scope.cpp  Scope.h  Statement.h  Symbol.h  SymbolTable.h  Token.cpp  Token.h  Variable.h
eval/: AST.cpp  AST.h  Arg.cpp  Arg.h  ArgSpec.h  Args.cpp  Args.h  Block.cpp  Block.h  Brace.cpp  Brace.h  Code.cpp  Code.h  CodeState.cpp~  CodeState.h~  Comma.cpp  Comma.h  Command.cpp  Command.h  CommandFragment.cpp  CommandFragment.h  Common.h  CompileError.h  EvalError.h  Expression.cpp  Expression.h  ExpressionBlock.cpp  ExpressionBlock.h  Function.cpp  Function.h  Global.cpp  Global.h  Identifier.cpp  Identifier.h  IsVar.cpp  IsVar.h  Log.cpp  Log.h  Method.cpp  Method.h  (+46 more)
eval/stdlib/: object.h
exstatik/: Codegen.cpp  Codegen.h  Compiler.cpp  Compiler.h  Lexer.cpp  Lexer.h  Makefile.am  Parser.cpp  Parser.h  main.cpp
fw/: Char.h  Compiler.cpp  Compiler.h  ComputeFunc.h  Connection.cpp  Connection.h  Connector.cpp  Connector.h  DS.cpp  DS.h  FWError.h  FWLog.cpp  FWLog.h  FWTree.cpp  FWTree.h  Grapher.cpp  Grapher.h  Hotlist.cpp  Hotlist.h  IConnection.h  IList.cpp  IList.h  Keyword.cpp  Keyword.h  Lexer.cpp  Lexer.h  ListenerTable.h  Literal.h  Machine.cpp  Machine.h  Makefile.am  Meta.cpp  Meta.h  Name.h  OData.h  Or.cpp  Or.h  OutputFunc.cpp  OutputFunc.h  OutputStrategy.cpp  (+19 more)
g/: cleanup.sh  convert.sh
info/: chain.txt  llvm.txt  notes.txt  vm.txt
istatik/: ConnectorWindow.cpp  ConnectorWindow.h  ISError.h  ISLog.cpp  ISLog.h  IStatik.cpp  IStatik.h  InputReader.h  InputWindow.cpp  InputWindow.h  Makefile.am  ParserWindow.cpp  ParserWindow.h  WindowAction.h  WindowResponse.h  main.cpp
lexer/: Common.h  Emitter.cpp  Emitter.h  LexError.h  Lexer.cpp  Lexer.h  Makefile.am  Tokenizer.h  lexer.cpp  lexer.qx  test_lexer.cpp  tiny_lexer_st  tiny_lexer_st-configuration  tiny_lexer_st-token_ids  tiny_lexer_st.cpp
p2/: Makefile.am  ParseError.h  Parser.cpp  Parser.h  Shok.h  Token.cpp  Token.h  parser.cpp
parser/: ActionParser.py  DecentSeqParser.py  DispParser.py  LexToken.py  LushParser.py  LushParserTest.py  MakeRule.py  Makefile.am  NiceSeqParser.py  OrParser.py  Parser.py  ParserTest.py  PlusParser.py  Rule.py  SeqParser.py  ShokParser.py  ShokParserTest.py  StableSeqParser.py  StarParser.py  TerminalParser.py  ValueParser.py  exp.txt  lush_parser.py  notes.txt  shok_parser.in  shok_parser.py
parser/shokparser/: DecentSeqParser.py  MakeRule.py  Makefile.am  ParserRunner.py  ParserTest.py  Rule.py  ShokParser.py  StarParser.py  TerminalParser.py
quexer/: lexer.qx  test_lexer.cpp  tiny_lexer_st  tiny_lexer_st-configuration  tiny_lexer_st-token  tiny_lexer_st-token_ids  tiny_lexer_st.cpp
ramblings/: Scanner.x  assignment.txt  beware.txt  datastructures.txt  expressions.txt  funcs.txt  funcs2.txt  gc_scratch.txt  implementing_objects.txt  interpreter.md  lang_delegates.txt  langtest.txt  lifetimes.txt  motivation.txt  notes2.txt  object_expressions.txt  objtest  postgo.txt  practice.txt  pratt.cpp  process.txt  process2.txt  renew.txt  reprise_worries.txt  shok.txt  software_try.txt  test2.txt  tmpp.cpp  types.txt  walkthrough.md  walkthrough.md~sigh
ramblings/shok/: lexer.shk
ramblings/testing/: scala_func.shk
shell/: Makefile.am  shell.cpp
statik/: Batch.cpp  Batch.h  ComputeFunc.h  Connector.cpp  Connector.h  ConnectorAction.h  Grapher.cpp  Grapher.h  Hotlist.cpp  Hotlist.h  IConnection.cpp  IConnection.h  IList.cpp  IList.h  IncParser.cpp  IncParser.h  InputReader.h  Keyword.cpp  Keyword.h  List.cpp  List.h  ListPool.cpp  ListPool.h  ListenerTable.h  Makefile.am  Meta.cpp  Meta.h  ObjectPool.h  Opt.cpp  Opt.h  Or.cpp  Or.h  OrderList.cpp  OrderList.h  OutputFunc.cpp  OutputFunc.h  ParseAction.h  ParseFunc.h  README.md  Regexp.cpp  (+26 more)
statik/test/: Battery.cpp  Battery.h  Keyword.cpp  Keyword.h  Makefile.am  Or.cpp  Or.h  STError.h  STLog.cpp  STLog.h  Splash.cpp  Splash.h  Star.cpp  Star.h  StatikBattery.h  Test.cpp  Test.h  main.cpp
testing/: scala.shk
thoughts/: Lush.y  constructors.txt  deque.shk  digression.txt  funcs_reprise.txt  inheritance.txt  inheritance_rules.txt  invariants.txt  marksweep.txt  nice.txt  objects.txt  parametric.txt  parsing_notes.txt  refs.txt  resolve.txt  self.txt  self_tests.txt  selftest.txt  software.txt
thoughts/shok/: binsearchtree.shk
util/: Graphviz.cpp  Graphviz.h  Log.cpp  Log.h  Makefile.am  Proc.cpp  Proc.h  Util.cpp  Util.h
vm/: Call.cpp  Call.h  CallStack.cpp  CallStack.h  Cmd.cpp  Cmd.h  Context.cpp  Context.h  Del.cpp  Del.h  Executor.cpp  Executor.h  ExpParser.h  Expression.cpp  Expression.h  Identifier.h  Instruction.cpp  Instruction.h  InstructionParser.h  Instructions.h  Makefile.am  Member.cpp  Member.h  New.cpp  New.h  Object.cpp  Object.h  StackFrame.h  StdLib.cpp  StdLib.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  VMError.h  ex.txt  vm.cpp
(+4 files in other folders)
