UTIL_DIR = ../util
UTIL_SRCS = \
    $(UTIL_DIR)/Log.cpp \
    $(UTIL_DIR)/Log.h

COMMON_SRCS = $(UTIL_SRCS)

bin_PROGRAMS = shok_compiler
shok_compiler_SOURCES = $(COMMON_SRCS) \
    Arg.cpp \
    Arg.h \
    Args.cpp \
    Args.h \
    ArgSpec.h \
    AST.cpp \
    AST.h \
    Block.cpp \
    Block.h \
    Brace.cpp \
    Brace.h \
    Command.cpp \
    Command.h \
    CommandFragment.cpp \
    CommandFragment.h \
    Common.h \
    CompileError.h \
    Expression.cpp \
    Expression.h \
    Function.cpp \
    Function.h \
    Identifier.cpp \
    Identifier.h \
    IsVar.cpp \
    IsVar.h \
    Method.cpp \
    Method.h \
    New.cpp \
    New.h \
    NewInit.cpp \
    NewInit.h \
    Node.cpp \
    Node.h \
    Object.cpp \
    Object.h \
    ObjectLiteral.cpp \
    ObjectLiteral.h \
    Operator.cpp \
    Operator.h \
    OperatorParser.cpp \
    OperatorParser.h \
    ProcCall.cpp \
    ProcCall.h \
    Returns.cpp \
    Returns.h \
    RootNode.cpp \
    RootNode.h \
    Scope.cpp \
    Scope.h \
    Statement.h \
    StdLib.cpp \
    StdLib.h \
    Symbol.h \
    SymbolTable.cpp \
    SymbolTable.h \
    Token.cpp \
    Token.h \
    Type.cpp \
    Type.h \
    TypedNode.cpp \
    TypedNode.h \
    TypeSpec.cpp \
    TypeSpec.h \
    Variable.cpp \
    Variable.h \
    compile.cpp
