shok_parser_PYTHON = \
    __init__.py \
    ActionParser.py \
    DispParser.py \
    LexToken.py \
    MakeRule.py \
    OrParser.py \
    Parser.py \
    ParserRunner.py \
    PlusParser.py \
    Rule.py \
    SeqParser.py \
    ShokParser.py \
    StarParser.py \
    TerminalParser.py

shok_parserdir = $(pythondir)/shokparser
